# Copyright Steven Bosnick 2017
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)

project('callable_traits', 'cpp', verson:'1.1.1', license:'boost')

if not meson.is_subproject()
    error('The meson support for callable_traits is designed for using callable_traits as a subproject.')
endif

callable_traits = declare_dependency(include_directories:'include')
